<resources>
    <string name="app_name">petition</string>
    <string name="petition_action_edit">编辑</string>

    <string name="petition_title_activity_splash">启动页</string>
    <string name="petition_title_activity_main">首页</string>
    <string name="petition_tab_label_home">网上信访</string>
    <string name="petition_tab_label_notice">信访指南</string>
    <string name="petition_tab_label_chat">信访资讯</string>
    <string name="petition_tab_label_personal">个人中心</string>
    <string name="petition_title_activity_contacts">联系人</string>

    <string name="petition_title_activity_about">关于</string>
    <string name="petition_title_request">投诉请求</string>
    <string name="petition_title_suggest">建议征集</string>
    <string name="petition_title_query">查询评价</string>
    <string name="petition_title_activity_request">投诉请求</string>
    <string name="petition_request_1">* 事发地</string>
    <string name="petition_request_2">* 问题类型</string>
    <string name="petition_request_3">是否有复核意见书</string>
    <string name="petition_request_4">法院是否有受理</string>
    <string name="petition_request_5">是否已行政复议</string>
    <string name="petition_request_6">仲裁机构是否受理</string>
    <string name="petition_request_7">是否允许公开</string>
    <string name="next">下一步</string>
    <string name="submit">提交</string>
    <string name="petition_contact">联名人</string>
    <string name="petition_content">内容</string>
    <string name="petition_adjunct">附件</string>
    <string name="petition_add">添加</string>
    <string name="petition_add_contact">添加联名人</string>
    <string name="petition_contact_list_name">联名人列表</string>
    <string name="petition_contact_people_num">联名人身份证号</string>
    <string name="petition_fill_content">填写内容</string>
    <string name="petition_add_adjunct">附件列表</string>
    <string name="petition_picture_name">照片</string>
    <string name="petition_file_name">文档</string>
    <string name="petition_doc_docx_name">"最多添加五个附件，每个附件不能超过10M，仅支持doc;docx;gif;jip;jpeg;png;bmp;txt;pdf"</string>
    <string name="petition_has_answer">已回复</string>
    <string name="petition_not_answer">未回复</string>
    <string name="petition_suggest_collect_list_name">建议征集列表</string>
    <string name="petition_add_new_name">新增</string>
    <string name="petition_suggest_collect_number">建议征集编号</string>
    <string name="petition_suggest_collect_content">建议征集内容</string>
    <string name="petition_suggest_collect_answer_content">回复内容</string>
    <string name="petition_suggest_type">建议类型</string>
    <string name="peititon_suggest_collect">建议征集</string>
    <string name="petition_commit_name">保存</string>
    <string name="petition_name">姓名</string>
    <string name="petition_id_card">证件号码</string>
    <string name="petition_area">所在地区</string>
    <string name="petition_detail_address">详细地址</string>
    <string name="petition_login_name">登录</string>

    <!--sharepre打头的属于sp的各种命名-->
    <string name="petition_sharepre_name">Info</string><!-- sp表格名称  用户信息存储-->
    <string name="petition_sharepre_nomal">NomalInfo</string><!--一般信息短暂存储sp表-->
    <string name="petition_sharepre_islogin">IsLogin</string><!--是否登录  boolean-->
    <string name="petition_sharepre_LXY">LXY</string><!--类型一-->
    <string name="petition_sharepre_LXE">LXE</string><!--类型二-->
    <string name="petition_sharepre_LXS">LXS</string><!--类型三-->
    <string name="petition_sharepre_SFD_SH">SFD_SH</string><!--省-->
    <string name="petition_sharepre_SFD_S">SFD_S</string><!--市-->
    <string name="petition_sharepre_SFD_X">SFD_X</string><!--县-->
    <string name="petition_sharepre_SFFH">SFFH</string><!--是否有复核意见书-->
    <string name="petition_sharepre_FYSFSL">FYSFSL</string><!--法院是否已受理-->
    <string name="petition_sharepre_SFXZFY">SFXZFY</string><!--是否行政复议-->
    <string name="petition_sharepre_XZJGSFSL">XZJGSFSL</string><!--仲裁机构是否受理-->
    <string name="petition_sharepre_SFGK">SFGK</string><!--是否允许公开-->
    <string name="petition_shareprefers_people_name">attact_people_name</string><!--联名人姓名-->
    <string name="petition_shareprefers_people_id_card_number">attact_people_id_card_number</string><!--联名人证件号码-->
    <string name="petition_shareprefers_people_detail_address">attact_people_detail_address</string><!--联名人详细地址-->
    <string name="petition_shareprefers_contact_people_SH">contact_people_SH</string><!--联名人地址省-->
    <string name="petition_shareprefers_contact_people_S">contact_people_S</string><!--联名人地址市-->
    <string name="petition_shareprefers_contact_people_X">contact_people_X</string><!--联名人地址县-->
    <string name="petition_shareprefers_save_list">strJson</string><!--保存的联名人列表对象-->
    <string name="petition_shareprefers_request_content">投诉请求内容</string><!--投诉请求保存的内容-->
    <string name="petition_shareprefers_file_id">petition_file_id</string>

    <string name="petition_shareprefers_XFR_XM">XM</string>
    <string name="petition_shareprefers_XFR_ZJHM">ZJHM</string>
    <string name="petition_sharepre_SFD_SHDM">SFD_SHDM</string>
    <string name="petition_sharepre_SFD_SDM">SFD_SDM</string>
    <string name="petition_sharepre_SFD_XDM">SFD_XDM</string>
    <string name="petition_sharepre_LXYDM">LXYDM</string>
    <string name="petition_shareprefer_LXEDM">LXEDM</string>
    <string name="petition_shareprefer_LXSDM">LXSDM</string>
    <string name="petition_suggest_collect_JYLXY">JYLXY</string>
    <string name="petition_suggest_collect_JYLXYDM">JYLXYDM</string>
    <string name="petition_suggest_collect_JYLXEDM">JYLXEDM</string>
    <string name="petition_suggest_collect_JYLXE">JYLXE</string>
    <string name="petition_suggest_collect_JYLXS">JYLXS</string>
    <string name="petition_suggest_collect_JYLXSDM">JYLXSDM</string>
    <string name="petition_suggest_collect_fill_content">建议征集填写内容</string>
    <string name="petition_share_registAddress_QY_SH">QY_SH</string>
    <string name="petition_regist_addaddress_QYSHDM">QY_SHDM</string>
    <string name="petition_share_registAddress_QY_S">QY_S</string>
    <string name="petition_regist_addaddress_QYSDM">QY_SDM</string>
    <string name="petition_share_registAddress_QY_X">QY_X</string>
    <string name="petition_regist_addaddress_QYXDM">QY_XDM</string>



    <string name="petition_toast_hint_01">内容不能为空</string>
    <string name="petition_logined">登录成功</string>
    <string name="petition_user_regist">用户注册</string>
    <string name="petition_sex">性别</string>
    <string name="petition_card_type">证件类型</string>
    <string name="petition_id_num">身份证号码</string>
    <string name="petition_card_num">证件号码</string>
    <string name="petition_reture_password">确定密码</string>
    <string name="petition_phone_number">手机号码</string>
    <string name="petition_verification_code">验证码</string>
    <string name="petition_register">注册</string>
    <string name="petition_get_verification_code">点击获取</string>
    <string name="petition_hint_01">请输入姓名</string>
    <string name="petition_hint_02">请输入证件号码</string>
    <string name="petition_hint_03">请输入详细地址</string>
    <string name="petition_hint_04">请输入密码</string>
    <string name="petition_hint_05">确认密码</string>
    <string name="petition_hint_06">请输入手机号码</string>
    <string name="petition_int_id_card_number">输入身份证</string>
    <string name="petition_forget_password">忘记密码?</string>
    <string name="petition_toast_01">请完善信息</string>
    <string name="petition_petition_letter_number">信访件编号</string>
    <string name="petition_petition_letter_content">信访件内容</string>
    <string name="petition_guide_name_01">信访条例</string>
    <string name="petition_guide_name_02">信访注意事项</string>
    <string name="petition_guide_name_03">网上信访流程</string>
    <string name="petition_guide_name_04">信访事项办理</string>
    <string name="petition_information_01">工作要闻</string>
    <string name="petition_information_02">地方动态</string>
    <string name="petition_information_03">公示公告</string>
    <string name="petition_information_04">典型案例</string>
    <string name="petition_personal_01">修改个人信息</string>
    <string name="petition_personal_02">修改绑定手机</string>
    <string name="petition_personal_03">修改密码</string>
    <string name="petition_personal_04">退出登录</string>
    <string name="petition_incident_site">事发地</string>
    <string name="petition_request_question">选择问题类型</string>
    <string name="petition_suggest_collect_type">建议类型</string>
    <string name="petition_suggest_collect_SFGK">新增建议征集是否允许公开Ckb</string>
    <string name="petition_type_id_card">身份证</string>
    <string name="petition_type_passport">有效护照</string>
    <string name="petition_type_hongkong_card">港澳居民来往内地通行证</string>
    <string name="petititon_type_taiwan_card">台湾居民来往内地通行证</string>
    <string name="petition_man">男</string>
    <string name="petition_woman">女</string>
    <string name="petition_area_choose">区域选择</string>
    <string name="petition_showtoast_02">密码输入不一致</string>
    <string name="petition_JBJG">经办机构</string>
    <string name="petition_JBRY">经办人员</string>
    <string name="petition_BLSJ">开始办理时间</string>
    <string name="petition_BLSX">办理时限</string>
    <string name="petition_CZLX">操作类型</string>
    <string name="petition_activity_to_activity_number">id</string>
    <string name="petition_add_succeed">添加成功</string>
    <string name="petition_add_defealt">上传失败</string>
    <string name="petition_notic_matter">信访注意事项</string>
    <string name="petition_guide_flow_path_01">来信办理流程</string>
    <string name="petition_guide_flow_path_02">来访办理流程</string>
    <string name="petition_area_01">地区</string>
    <string name="petition_nation">民族</string>
    <string name="petition_personal_info">个人信息</string>
    <string name="petition_sharepres_XFR_ZJLX">ZJLX</string>
    <string name="petition_sharepres_XFR_DHHM">DHHM</string>
    <string name="petition_sharepres_XFR_XB">XB</string>
    <string name="petition_sharepres_XFR_SZDQ">SZDQ</string>
    <string name="petition_sharepres_XFR_XXDZ">XXDZ</string>
    <string name="petition_select_nation">民族选择</string>
    <string name="petition_nation_01">民族</string>
    <string name="petition_show_error">不支持此种格式的文件,请重新选择</string>
    <string name="petition_change_phonenumber">修改绑定手机</string>
    <string name="petition_verifycode_true">验证码正确</string>
    <string name="petition_successd">手机号码修改成功</string>
    <string name="petition_change_password">修改密码</string>
    <string name="petition_password_change_succeed">密码修改成功</string>
    <string name="petition_error_show">密码输入不一致或者密码不能为空</string>
    <string name="petition_error_toast">尚未登录用户</string>
    <string name="petition_found_password">密码找回</string>
    <string name="petition_error_toast_01">请选择对应类型文件</string>
    <string name="petition_toast_error_02">请完善联名人信息</string>
    <string name="petition_toast_error_03">请完善联名人信息或检查身份证信息</string>
    <string name="petition_SFDDZ">* 事发地地址</string>
    <string name="petition_sp_sfddz">SFDDZ</string>
    <string name="petition_verifycode_get">验证码发送成功</string>
    <string name="petition_password_get_succeed">密码找回成功</string>
    <string name="petition_sp_ZJLX">ZJLX</string>
    <string name="petition_sp_ZJLXID">ZJLXID</string>
    <string name="petition_choose_zjlx">证件类型</string>
    <string name="petition_has_pingjia">已评价</string>
    <string name="petition_pingjia">评价</string>
    <string name="petition_hint_0">请输入评价内容</string>
    <string name="petition_01">新增成功</string>
    <string name="petition_shareprefers_contact_people_SHDM">contact_people_SHDM</string>
    <string name="petition_shareprefers_contact_people_SDM">contact_people_SDM</string>
    <string name="petition_shareprefers_contact_people_XDM">contact_people_XDM</string>
</resources>
